--- a/travel_destination_recommendation/webapp/templates/index.html
+++ b/travel_destination_recommendation/webapp/templates/index.html
@@ -247,35 +247,51 @@
             <img src="images/historical.jpg" width="100" height="80" id=rec_1_img>
         </div>
             
+        <form id=rec_1_interest>    
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
+        </form> 
             
-<!--         <textarea id="rec_1_interest"></textarea>
- -->
         <div id=rec_2>rec 2</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_2_img>
         </div>
         
+        <form id=rec_2_interest> 
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        
-<!--         <textarea id="rec_2_interest"></textarea> -->
+        </form>
+            
         <div id=rec_3>rec 3</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_3_img>
         </div>
-        <textarea id="rec_3_interest"></textarea>
+            
+        <form id=rec_3_interest> 
+        <input type="radio" name="choice" value="1"> Interested!
+        <input type="radio" name="choice" value="0"> Not interested
+        </form>    
+            
         <div id=rec_4>rec 4</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_4_img>
         </div>
-        <textarea id="rec_4_interest"></textarea>
+            
+        <form id=rec_4_interest> 
+        <input type="radio" name="choice" value="1"> Interested!
+        <input type="radio" name="choice" value="0"> Not interested
+        </form>    
+        
         <div id=rec_5>rec 5</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_5_img>
         </div>
-        <textarea id="rec_5_interest"></textarea>
+        
+        <form id=rec_5_interest> 
+        <input type="radio" name="choice" value="1"> Interested!
+        <input type="radio" name="choice" value="0"> Not interested
+        </form>
+            
         <button id="satisfaction_button">Thank you!</button>
         </form> 
      </div>
