--- a/travel_destination_recommendation/webapp/templates/index.html
+++ b/travel_destination_recommendation/webapp/templates/index.html
@@ -62,16 +62,16 @@
           req.open('POST', '/recommend', True)
           req.set_header('content-type','application/json')
           user_inputs = {
-              'user_input_place_1': document['place_1_rating'].value,
-              'user_input_place_2': document['place_2_rating'].value,
-              'user_input_place_3': document['place_3_rating'].value,
-              'user_input_place_4': document['place_4_rating'].value,
-              'user_input_place_5': document['place_5_rating'].value,
-              'user_input_place_6': document['place_6_rating'].value,
-              'user_input_place_7': document['place_7_rating'].value,
-              'user_input_place_8': document['place_8_rating'].value,
-              'user_input_place_9': document['place_9_rating'].value,
-              'user_input_place_10': document['place_10_rating'].value
+              'user_input_place_1': document['place_1_slider'].value,
+              'user_input_place_2': document['place_2_slider'].value,
+              'user_input_place_3': document['place_3_slider'].value,
+              'user_input_place_4': document['place_4_slider'].value,
+              'user_input_place_5': document['place_5_slider'].value,
+              'user_input_place_6': document['place_6_slider'].value,
+              'user_input_place_7': document['place_7_slider'].value,
+              'user_input_place_8': document['place_8_slider'].value,
+              'user_input_place_9': document['place_9_slider'].value,
+              'user_input_place_10': document['place_10_slider'].value
             }
           data = json.dumps(user_inputs)
           req.send(data)
@@ -287,6 +287,7 @@
      
     <div id="random_recs" style="display:none">   
         <h2>Slide right if you have been to the location and liked it. Slide left if you have been to the location and did not like it. Do nothing if you have not been to the location.</h2>
+        
         <div id=place_1>place 1</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=place_1_img>
@@ -294,7 +295,8 @@
         <div class="slidecontainer">
             <input type="range" min="-1" max="1" value="0" class="slider" id="place_1_slider">
             <span id="place_1_label">Have not been</span>
-        </div>        
+        </div>  
+        
         <div id=place_2>place 2</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=place_2_img>
@@ -303,6 +305,7 @@
             <input type="range" min="-1" max="1" value="0" class="slider" id="place_2_slider">
             <span id="place_2_label">Have not been</span>
         </div> 
+        
         <div id=place_3>place 3</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=place_3_img>
@@ -311,14 +314,16 @@
             <input type="range" min="-1" max="1" value="0" class="slider" id="place_3_slider">
             <span id="place_3_label">Have not been</span>
         </div>
+        
         <div id=place_4>place 4</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=place_4_img>
         </div>
         <div class="slidecontainer">
-            <input type="range" min="-1" max="1" value="0" class="slider" id="place_5_slider">
-            <span id="place_5_label">Have not been</span>
+            <input type="range" min="-1" max="1" value="0" class="slider" id="place_4_slider">
+            <span id="place_4_label">Have not been</span>
         </div>
+        
         <div id=place_5>place 5</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=place_5_img>
