--- a/travel_destination_recommendation/webapp/templates/index.html
+++ b/travel_destination_recommendation/webapp/templates/index.html
@@ -242,6 +242,7 @@
      
     </script>
     <h1>Rate importance on a scale of 0 to 10</h1>  
+    
     <div>Forest/Mountain</div>
     <div>
         <img src="images/forest_mountain.jpg" width="100" height="80">
@@ -385,50 +386,44 @@
             <img src="images/historical.jpg" width="100" height="80" id=rec_1_img>
         </div>
             
-        <form id=rec_1_interest>    
+        <input type="image" src="images/thumbs_up.png" width="50" height="50" id="thumbs_up"/>
+        <input type="image" src="images/thumbs_down.png" width="50" height="50" id="thumbs_down"/>    
+<!--       
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        </form> 
+         -->
             
         <div id=rec_2>rec 2</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_2_img>
         </div>
         
-        <form id=rec_2_interest> 
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        </form>
             
         <div id=rec_3>rec 3</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_3_img>
         </div>
             
-        <form id=rec_3_interest> 
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        </form>    
             
         <div id=rec_4>rec 4</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_4_img>
         </div>
             
-        <form id=rec_4_interest> 
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        </form>    
         
         <div id=rec_5>rec 5</div>
         <div>
             <img src="images/historical.jpg" width="100" height="80" id=rec_5_img>
         </div>
         
-        <form id=rec_5_interest> 
         <input type="radio" name="choice" value="1"> Interested!
         <input type="radio" name="choice" value="0"> Not interested
-        </form>
             
         <button id="satisfaction_button">Thank you!</button>
         </form> 
