start moving towards the bootstrap template

--- a/travel_destination_recommendation/webapp/static/css/agency.css
+++ b/travel_destination_recommendation/webapp/static/css/agency.css
@@ -175,8 +175,8 @@ img::-moz-selection {
 
 header.masthead {
   text-align: center;
-  color: white;
-  background-image: url("../img/header-bg.jpg");
+  color: cyan;
+  background-image: url("../images/coastal.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
